[tabbox] Use XCB_CURRENT_TIME for xcb_allow_event

BUG: 335187